Ajustes rota para criar produtos e autenticação
